# Dna

Dna/: Dna.csproj
Dna.BinaryTranslator/: Dna.BinaryTranslator.csproj
Dna.BinaryTranslator/JmpTables/Slicing/: SymbolicExpressionSlicer.cs
Dna.BinaryTranslator/Lifting/: CfgTranslator.cs
Dna.BinaryTranslator/Unsafe/: IterativeFunctionTranslator.cs
Dna.Example/: Dna.Example.csproj  Program.cs
Dna.LLVMInterop/: CMakeLists.txt  CMakePresets.json  Dna.LLVMInterop.sln  Dna.LLVMInterop.vcxproj  Dna.LLVMInterop.vcxproj.filters  dllmain.cpp
Dna.LLVMInterop/API/: ExportedAPI.h  LLVMC.hpp
Dna.LLVMInterop/API/LLVM/Transforms/: Scalar.h
Dna.LLVMInterop/API/LLVMAPI/Analysis/: LoopInfo.h
Dna.LLVMInterop/API/LLVMAPI/Transforms/: Scalar.h
Dna.LLVMInterop/API/LLVMAPI/Transforms/IPO/: PassManagerBuilder.h
Dna.LLVMInterop/API/Region/: RegionAPI.h
Dna.LLVMInterop/API/souper/: SouperCandidates.h  SouperExprBuilder.h  SouperInst.h
Dna.LLVMInterop/Passes/: ControlFlowStructuringPass.h  JumpTableAnalysisPass.h
Dna.LLVMInterop/Pipeline/: Pipeline.h
Dna.LLVMInterop/souper/lib/Extractor/: Candidates.cpp  KLEEBuilder.cpp
Dna.LLVMInterop/souper/lib/Pass/: Pass.cpp
Dna.LLVMInterop/souper/lib/SMTLIB2/: smtlib_Solver.cpp
Dna/Emulation/Unicorn/: GdtHelper.cs  UnicornEmulator.cs
Dna/LLVMInterop/API/LLVMBindings/Transforms/Utils/: NativeCloningApi.cs
Dna/LLVMInterop/Passes/: JumpTableAnalysisPassV1.cs
Dna/Reconstruction/: FunctionDetector.cs
Dna/Utilities/: ClangCompiler.cs  IDALoader.cs
